[gd_scene load_steps=29 format=3 uid="uid://dg55yu6bit6jt"]

[ext_resource type="Script" path="res://scripts/phone_os.gd" id="1_r0wjl"]
[ext_resource type="Texture2D" uid="uid://dol7joclo1ryi" path="res://assets/images/clouds.jpg" id="2_hqmi7"]
[ext_resource type="Shader" path="res://shaders/blur_color_bw.gdshader" id="3_4lvoo"]
[ext_resource type="Texture2D" uid="uid://bfg0lk6kvgptl" path="res://assets/images/icons/notification_icon.png" id="3_jnjbr"]
[ext_resource type="FontFile" uid="uid://dllrqm3ycpbnt" path="res://ui/fonts/HDArnie-Regular.otf" id="4_1d7ag"]
[ext_resource type="Script" path="res://scripts/volume_slider.gd" id="4_5jmmy"]
[ext_resource type="Texture2D" uid="uid://18wyhfnyhjqn" path="res://assets/images/icons/camera_icon.webp" id="5_8pkqu"]
[ext_resource type="Texture2D" uid="uid://cjmjkd3h610nf" path="res://assets/images/icons/video_icon.png" id="6_vmfnf"]
[ext_resource type="Texture2D" uid="uid://bm2pd3jhn61iq" path="res://assets/images/selfie.png" id="7_7bxb7"]
[ext_resource type="FontFile" uid="uid://d02ygxi1jy6m3" path="res://ui/fonts/neuropol_x.otf" id="7_f3rx8"]
[ext_resource type="Texture2D" uid="uid://bh2aodmuhfccj" path="res://assets/images/icons/messages_icon.webp" id="7_rhvqn"]
[ext_resource type="LabelSettings" uid="uid://b0qm7cdafhgra" path="res://ui/settings/app_title.tres" id="8_0yw4n"]
[ext_resource type="StyleBox" uid="uid://bdnuw0by175th" path="res://ui/styles/battery_bar.tres" id="8_v8ae1"]
[ext_resource type="StyleBox" uid="uid://duct66cpghgeh" path="res://ui/styles/separator.tres" id="8_y0en8"]
[ext_resource type="Texture2D" uid="uid://byqi5w8p5ltyq" path="res://assets/images/cursor_48.png" id="9_6xph0"]
[ext_resource type="StyleBox" uid="uid://c4lw5oyyq5657" path="res://ui/styles/battery_bar_fill.tres" id="9_6yc02"]
[ext_resource type="Theme" uid="uid://v3wqj6dvklo0" path="res://ui/themes/phone_os.tres" id="12_fsmwd"]
[ext_resource type="LabelSettings" uid="uid://cs2sk7aftrk1c" path="res://ui/settings/bubble_chat.tres" id="13_lgy4j"]
[ext_resource type="StyleBox" uid="uid://bkskyjp3vt3rs" path="res://ui/styles/bubble_chat.tres" id="13_o3gel"]
[ext_resource type="LabelSettings" uid="uid://do3s44f43vkkm" path="res://ui/settings/os_text.tres" id="14_n38hu"]
[ext_resource type="StyleBox" uid="uid://jgie8qpxs0gh" path="res://ui/styles/bubble_player.tres" id="14_yaw3x"]
[ext_resource type="Texture2D" uid="uid://b535qnl8st5wi" path="res://assets/images/icons/back.png" id="15_0cf0y"]
[ext_resource type="Texture2D" uid="uid://dhc8q2h36kxwr" path="res://assets/images/icons/home.png" id="16_hax3j"]
[ext_resource type="Texture2D" uid="uid://cewdbxx36id1s" path="res://assets/images/icons/settings.png" id="17_26q5e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gne0p"]
shader = ExtResource("3_4lvoo")
shader_parameter/lod = 3.0
shader_parameter/blend_factor = 0.5
shader_parameter/overlay = Vector3(0.1, 0.1, 0.2)
shader_parameter/saturation = 0.5
shader_parameter/blur_size = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8he5"]
bg_color = Color(1, 1, 1, 1)
expand_margin_left = 24.0
expand_margin_right = 24.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_75f8i"]
draw_center = false

[sub_resource type="Theme" id="Theme_mdga8"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/constants/h_separation = 16
Button/font_sizes/font_size = 40
Button/fonts/font = ExtResource("4_1d7ag")
Button/styles/hover = SubResource("StyleBoxFlat_n8he5")
Button/styles/normal = SubResource("StyleBoxFlat_75f8i")
Label/colors/font_color = Color(0.0992318, 0.0992318, 0.0992318, 1)
Label/font_sizes/font_size = 36
Label/fonts/font = ExtResource("4_1d7ag")
Label/styles/bubble_chat = ExtResource("13_o3gel")
Label/styles/bubble_player = ExtResource("14_yaw3x")
MarginContainer/constants/margin_bottom = 24
MarginContainer/constants/margin_left = 24
MarginContainer/constants/margin_right = 24
MarginContainer/constants/margin_top = 24
ProgressBar/colors/font_color = Color(0, 0, 0, 1)
ProgressBar/font_sizes/font_size = 32
ProgressBar/fonts/font = ExtResource("7_f3rx8")
ProgressBar/styles/background = ExtResource("8_v8ae1")
ProgressBar/styles/fill = ExtResource("9_6yc02")
VBoxContainer/constants/separation = 16

[node name="PhoneOS" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1600.0
offset_bottom = 1600.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1
script = ExtResource("1_r0wjl")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(1497.78, 842.5)
scale = Vector2(0.693415, 0.780093)
texture = ExtResource("2_hqmi7")

[node name="PhoneSize" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -640.0
offset_right = 360.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Background" type="ColorRect" parent="PhoneSize"]
visible = false
material = SubResource("ShaderMaterial_gne0p")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.439216)

[node name="WhiteBackground" type="ColorRect" parent="PhoneSize"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.439216)

[node name="Apps" type="Control" parent="PhoneSize"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 272.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("12_fsmwd")

[node name="MarginContainer" type="MarginContainer" parent="PhoneSize/Apps"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -274.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_fsmwd")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PhoneSize/Apps/MarginContainer"]
layout_mode = 2
theme = ExtResource("12_fsmwd")

[node name="Camera" type="Button" parent="PhoneSize/Apps/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("12_fsmwd")
text = "Camera"
icon = ExtResource("5_8pkqu")
alignment = 0

[node name="Chats" type="Button" parent="PhoneSize/Apps/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("12_fsmwd")
text = "Chats"
icon = ExtResource("7_rhvqn")
alignment = 0

[node name="Video" type="Button" parent="PhoneSize/Apps/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("12_fsmwd")
text = "Video"
icon = ExtResource("6_vmfnf")
alignment = 0

[node name="Settings" type="Control" parent="PhoneSize"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PhoneSize/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_fsmwd")
theme_override_constants/margin_top = 128

[node name="VBoxContainer2" type="VBoxContainer" parent="PhoneSize/Settings/MarginContainer"]
layout_mode = 2

[node name="Settings" type="Label" parent="PhoneSize/Settings/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("12_fsmwd")
theme_override_font_sizes/font_size = 48
text = "Settings"
label_settings = ExtResource("8_0yw4n")
horizontal_alignment = 3
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PhoneSize/Settings/MarginContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("12_fsmwd")

[node name="HBoxContainer" type="HBoxContainer" parent="PhoneSize/Settings/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PhoneSize/Settings/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VolumeLabel" type="Label" parent="PhoneSize/Settings/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_mdga8")
theme_override_font_sizes/font_size = 48
text = "Volume"
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="PhoneSize/Settings/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_constants/separation = 48
theme_override_styles/separator = ExtResource("8_y0en8")

[node name="VolumeSlider" type="HSlider" parent="PhoneSize/Settings/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("12_fsmwd")
max_value = 1.0
step = 0.05
script = ExtResource("4_5jmmy")
bus_name = "Master"

[node name="VBoxContainer2" type="VBoxContainer" parent="PhoneSize/Settings/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="Label" parent="PhoneSize/Settings/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = SubResource("Theme_mdga8")
theme_override_font_sizes/font_size = 48
text = "Fullscreen"
horizontal_alignment = 3
vertical_alignment = 1

[node name="FullscreenSwitch" type="CheckButton" parent="PhoneSize/Settings/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("12_fsmwd")
alignment = 2

[node name="Quit" type="Button" parent="PhoneSize/Settings/MarginContainer/VBoxContainer2"]
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_mdga8")
theme_override_font_sizes/font_size = 72
text = "Turn off phone"

[node name="Camera" type="Control" parent="PhoneSize"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="PhoneSize/Camera"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="PhoneSize/Camera"]
position = Vector2(360.5, 608.507)
scale = Vector2(0.958667, 0.958667)
texture = ExtResource("7_7bxb7")
region_enabled = true
region_rect = Rect2(420.241, 0, 750.256, 1040)

[node name="MarginContainer" type="MarginContainer" parent="PhoneSize/Camera"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PhoneSize/Camera/MarginContainer"]
layout_mode = 2

[node name="Chats" type="Control" parent="PhoneSize"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("12_fsmwd")

[node name="MarginContainer" type="MarginContainer" parent="PhoneSize/Chats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_fsmwd")
theme_override_constants/margin_top = 128

[node name="VBoxContainer" type="VBoxContainer" parent="PhoneSize/Chats/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Chats" type="Label" parent="PhoneSize/Chats/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("12_fsmwd")
theme_override_font_sizes/font_size = 48
text = "Chats"
label_settings = ExtResource("8_0yw4n")
horizontal_alignment = 3
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PhoneSize/Chats/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("12_fsmwd")

[node name="Asuka" type="Button" parent="PhoneSize/Chats/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_mdga8")
text = "Asuka"
icon = ExtResource("9_6xph0")
alignment = 0

[node name="AsukaChat" type="Control" parent="PhoneSize"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PhoneSize/AsukaChat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_fsmwd")
theme_override_constants/margin_top = 128

[node name="VBoxContainer" type="VBoxContainer" parent="PhoneSize/AsukaChat/MarginContainer"]
layout_mode = 2
theme = SubResource("Theme_mdga8")

[node name="Label" type="Label" parent="PhoneSize/AsukaChat/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource("Theme_mdga8")
text = "Asuka chat"
label_settings = ExtResource("8_0yw4n")

[node name="ScrollContainer" type="ScrollContainer" parent="PhoneSize/AsukaChat/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_mdga8")

[node name="HBoxContainer" type="VBoxContainer" parent="PhoneSize/AsukaChat/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme = SubResource("Theme_mdga8")

[node name="DefaultAsuka" type="Label" parent="PhoneSize/AsukaChat/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(600, 1)
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("Theme_mdga8")
theme_override_styles/normal = ExtResource("13_o3gel")
text = "this is just a placeholder text. don't think this is the real thing 'cause it's not."
label_settings = ExtResource("13_lgy4j")
autowrap_mode = 3

[node name="DefaultPlayer" type="Label" parent="PhoneSize/AsukaChat/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_mdga8")
theme_override_styles/normal = ExtResource("14_yaw3x")
text = "this is just a placeholder text. don't think this is the real thing 'cause it's not."
label_settings = ExtResource("13_lgy4j")
autowrap_mode = 3

[node name="TopBar" type="Control" parent="PhoneSize"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 106.0
grow_horizontal = 2
mouse_filter = 2
theme = ExtResource("12_fsmwd")

[node name="ColorRect" type="ColorRect" parent="PhoneSize/TopBar"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.478431)

[node name="MarginContainer" type="MarginContainer" parent="PhoneSize/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_fsmwd")

[node name="HBoxContainer" type="HBoxContainer" parent="PhoneSize/TopBar/MarginContainer"]
layout_mode = 2
theme = ExtResource("12_fsmwd")

[node name="Time" type="Label" parent="PhoneSize/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource("Theme_mdga8")
text = "10:36"
label_settings = ExtResource("14_n38hu")
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="PhoneSize/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("12_fsmwd")
theme_override_constants/separation = 12

[node name="Notification" type="TextureRect" parent="PhoneSize/TopBar/MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_jnjbr")
expand_mode = 3

[node name="VSeparator" type="VSeparator" parent="PhoneSize/TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("12_fsmwd")
theme_override_constants/separation = 320

[node name="BatteryBar" type="ProgressBar" parent="PhoneSize/TopBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("12_fsmwd")
max_value = 30.0

[node name="BatteryTimer" type="Timer" parent="PhoneSize/TopBar/MarginContainer/HBoxContainer/BatteryBar"]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="PhoneSize/TopBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(12, 24)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="BottomBar" type="Control" parent="PhoneSize"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -163.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PhoneSize/BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("12_fsmwd")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PhoneSize/BottomBar/MarginContainer"]
layout_mode = 2
theme = ExtResource("12_fsmwd")

[node name="Back" type="Button" parent="PhoneSize/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("12_fsmwd")
icon = ExtResource("15_0cf0y")
icon_alignment = 1

[node name="Home" type="Button" parent="PhoneSize/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("12_fsmwd")
icon = ExtResource("16_hax3j")
icon_alignment = 1

[node name="Settings" type="Button" parent="PhoneSize/BottomBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("12_fsmwd")
icon = ExtResource("17_26q5e")
icon_alignment = 1

[connection signal="pressed" from="PhoneSize/Apps/MarginContainer/VBoxContainer/Camera" to="." method="_on_camera_pressed"]
[connection signal="pressed" from="PhoneSize/Apps/MarginContainer/VBoxContainer/Chats" to="." method="_on_chats_pressed"]
[connection signal="toggled" from="PhoneSize/Settings/MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/FullscreenSwitch" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="PhoneSize/Settings/MarginContainer/VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PhoneSize/Chats/MarginContainer/VBoxContainer/Asuka" to="." method="_on_asuka_pressed"]
[connection signal="pressed" from="PhoneSize/BottomBar/MarginContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PhoneSize/BottomBar/MarginContainer/HBoxContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="PhoneSize/BottomBar/MarginContainer/HBoxContainer/Settings" to="." method="_on_settings_pressed"]
